--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>
-    hello git
-    </h1>
-    <p>asa</p>
+    <header>
+        header
+    </header>
     
 </body>
 </html>
