--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <header>
         header
     </header>
+
+    <div class="slider">
+        <h1>slide 1</h1>
+        <h1>slide 2</h1>
+    </div>
     
 </body>
 </html>
